# ml_project_backend

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  service.py  template.py
src/: constants.py  predict.py
