[project]
name = "ml-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]
